added cellspacing to table

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </ul>
   <h3>Work Experience[fake info]</h3>
 
-  <table>
+  <table cellspacing="20">
     <thead>
       <tr>
         <th>Dates</th>
